--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Search/QQ.txt
 Search/QQBig.txt
 Search/uuu9.com.sql
+LinkedList/SingleLinkedList/1_3.txt
+LinkedList/SingleLinkedList/CreditCardData.txt
